change some element

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                     <p id="outputDisplay" style="text-transform: capitalize;">hello</p>
                 </div>
             </div>
-            <button class="secondary-btn" id="giveTryBTN">give a try</button>
+            <div> 
+                <button class="secondary-btn" id="giveTryBTN">give a try</button>
+            </div>
             <div class="list_of_winner">
                 <ul>
                     <li>
@@ -52,6 +54,9 @@
                         <p style="text-transform: capitalize;">third winner : <span id="thirdWinner"></span></p>
                     </li>
                 </ul>
+            </div>
+            <div>
+                <p style="text-transform: capitalize;font-size: 16px; letter-spacing: 1px; ">remaining members</p>
             </div>
             <div class="remaining_members">
                 <ul id="remainingMembers">
