--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             <div class="list_of_winner">
                 <ul>
                     <li>
-                        <p style="text-transform: capitalize;">first winner : <span id="firstWinner"></span></p>
+                        <p style="text-transform: capitalize">first winner : <span id="firstWinner" style="font-weight: bold; font-size: 16px;"></span></p>
                     </li>
                     <li>
-                        <p style="text-transform: capitalize;">second winner : <span id="secondWinner"></span></p>
+                        <p style="text-transform: capitalize;">second winner : <span id="secondWinner" style="font-weight: bold; font-size: 16px;"></span></p>
                     </li>
                     <li>
-                        <p style="text-transform: capitalize;">third winner : <span id="thirdWinner"></span></p>
+                        <p style="text-transform: capitalize;">third winner : <span id="thirdWinner" style="font-weight: bold; font-size: 16px;"></span></p>
                     </li>
                 </ul>
             </div>
